[package]
name = "sts_map_oracle"
version = "1.0.0"
authors = ["Rusty 0ne <4fun.and.job.offers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
